# metarclone

./: .gitignore  README.md  requirements.txt  setup.cfg
src/metarclone/: __init__.py  checksum.py  cli.py  config.py  download.py  metadata.py  rclone.py  upload.py  utils.py
