[metadata]
name = metarclone
version = 0.0.1.dev0
author = Adrien Wu
author_email = adrien.sf.wu@gmail.com
description = Metadata-preserving backup with small file merging using Rclone
url = https://github.com/adrien1018/metarclone

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    disjoint-set

[options.entry_points]
console_scripts =
    metarclone = metarclone.cli:cli_entry

[options.packages.find]
where = src